force-app/main/default/objects/Call_Dispositions__c/Call_Dispositions__c.object-meta.xml
<CustomObject>
    <label>Call Dispositions</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Call Disposition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Dispositions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>