force-app/main/default/objects/Call_Dispositions__c/fields/Call_Category__c.field-meta.xml
<CustomField>
    <fullName>Call_Category__c</fullName>
    <label>Call Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Welcome Call Complete</fullName>
            </value>
            <value>
                <fullName>First Referral Call Complete</fullName>
            </value>
            <value>
                <fullName>Aged Referral Call Complete</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Follow up needed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>