force-app/main/default/objects/Call_Dispositions__c/fields/Caller__c.field-meta.xml
<CustomField>
    <fullName>Caller__c</fullName>
    <label>Caller</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Call Dispositions</relationshipLabel>
    <relationshipName>Call_Dispositions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>