force-app/main/default/objects/Call_Dispositions__c/fields/IQVIA_intervention_completed__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_intervention_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IQVIA intervention completed</label>
    <type>Checkbox</type>
</CustomField>