force-app/main/default/objects/Call_Dispositions__c/fields/Study_Site__c.field-meta.xml
<CustomField>
    <fullName>Study_Site__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Study Site</label>
    <referenceTo>Study_Site__c</referenceTo>
    <relationshipLabel>Call Dispositions</relationshipLabel>
    <relationshipName>Call_Dispositions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>