force-app/main/default/objects/Call_Dispositions__c/validationRules/Notes_Null_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Notes_Null_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF( IQVIA_intervention_required__c ,LEN(Notes__c)== 0,false)</errorConditionFormula>
    <errorMessage>Notes is Required</errorMessage>
</ValidationRule>