force-app/main/default/objects/Call_Dispositions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Caller__c</columns>
    <columns>IQVIA_intervention_required__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Study_Site__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>